# srv-monitor

./: .gitignore  CMakeLists.txt  Doxyfile  RGFW_8h_source.html  annotated.html  classLogger-members.html  classLogger.html  classdisplay_1_1DisplayBase-members.html  classdisplay_1_1DisplayBase.html  classdisplay_1_1desktop_1_1DesktopDisplay-members.html  classdisplay_1_1desktop_1_1DesktopDisplay.html  classdisplay_1_1drm_1_1DrmDevice.html  classdisplay_1_1drm_1_1DrmDisplay-members.html  classdisplay_1_1drm_1_1DrmDisplay.html  classes.html  desktop__display_8h_source.html  dir_25685f9c6d837c57f295dee081495707.html  dir_5ec8ef72743c4e49b4429155f183ef89.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d02d8e96e0be6dff9d2f7ff8ace093aa.html  dir_d44c64559bbebec7f509842c48db8b23.html  display_8h_source.html  drm__display_8h_source.html  env_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  glad_8h_source.html  group__Callbacks.html  group__Clipboard.html  group__Input.html  group__Monitor.html  group__Supporting.html  group__Threads.html  group__Window__management.html  group__gamepad.html  group__graphics__API.html  group__joystick.html  hierarchy.html  (+27 more)
.github/workflows/: doxygen.yml
cmake/: FindLibDRM.cmake
html/: classdisplay_1_1drm_1_1DrmDevice-members.html  classdisplay_1_1drm_1_1DrmDisplay.html  classes.html  classtimer-members.html  classtimer.html  dir_25685f9c6d837c57f295dee081495707.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_d01803a88b8c09de774fd00a8f828440.html  drm__display_8h_source.html  files.html  index.html  settings_8h_source.html  structdisplay_1_1Atrributes-members.html  structdisplay_1_1Atrributes.html  structdisplay_1_1drm_1_1DrmConnector-members.html  structdisplay_1_1drm_1_1DrmResouces-members.html
html/search/: all_0.js  all_1.js  all_5.js  functions_1.js  searchdata.js  variables_1.js
include/: RGFW.h
include/glad/: glad.h
latex/: annotated.tex  classLogger.tex  classdisplay_1_1DisplayBase.eps  classdisplay_1_1DisplayBase.tex  classdisplay_1_1drm_1_1DrmDevice.tex  classdisplay_1_1drm_1_1DrmDisplay.eps  classdisplay_1_1drm_1_1DrmDisplay.tex  classtimer.tex  display_8h_source.tex  drm__display_8h_source.tex  files.tex  hierarchy.tex  logger_8h_source.tex  refman.tex  settings_8h_source.tex  structdisplay_1_1Atrributes.tex  structdisplay_1_1drm_1_1DrmBuffer.tex  structdisplay_1_1drm_1_1DrmConnector.tex  structdisplay_1_1drm_1_1DrmResouces.tex  structdisplay_1_1drm_1_1Options.tex  timer_8h_source.tex
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_3.js  all_6.js  all_8.js  all_d.js  all_f.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_4.js  variables_b.js
src/: glad.c  main.cpp  settings.cpp  settings.h
src/display/: display.h
src/display/desktop/: desktop_display.cpp  desktop_display.h
src/display/drm/: drm_display.cpp  drm_display.h
src/utils/: env.h  logger.cpp  logger.h  timer.cpp  timer.h
